Add day1 exercise

--- a/AdventOfCode/AdventOfCode.fsproj
+++ b/AdventOfCode/AdventOfCode.fsproj
@@ -7,8 +7,7 @@
   <ItemGroup>
     <Compile Include="TopologicalSort.fs" />
     <None Include="Excercises2018.fsx" />
+    <None Include="Excercises2019.fsx" />
   </ItemGroup>
-
-  <ItemGroup />
 
 </Project>
