Add Excercises2020 and day 1

--- a/AdventOfCode/AdventOfCode.fsproj
+++ b/AdventOfCode/AdventOfCode.fsproj
@@ -8,6 +8,7 @@
     <Compile Include="TopologicalSort.fs" />
     <None Include="Excercises2018.fsx" />
     <None Include="Excercises2019.fsx" />
+    <None Include="Excercises2020.fsx" />
   </ItemGroup>
 
 </Project>
