Add and solve 2021 day 1

--- a/AdventOfCode/AdventOfCode.fsproj
+++ b/AdventOfCode/AdventOfCode.fsproj
@@ -10,6 +10,7 @@
     <None Include="Excercises2018.fsx" />
     <None Include="Excercises2019.fsx" />
     <None Include="Excercises2020.fsx" />
+    <None Include="Excercises2021.fsx" />
   </ItemGroup>
 
 </Project>
