--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,6 +18,10 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
+      run: dotnet tool restore
+    - name: Restore dependencies
+      run: dotnet paket restore
+    - name: Restore dependencies
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
