--- a/AdventOfCode/AdventOfCode.fsproj
+++ b/AdventOfCode/AdventOfCode.fsproj
@@ -10,6 +10,7 @@
     <Compile Include="Excercises2021.fs" />
     <Compile Include="Excercises2022.fs" />
     <Compile Include="Excercises2023.fs" />
+    <Compile Include="Excercises2024.fs" />
     <None Include="Excercises2018.fsx" />
     <None Include="Excercises2019.fsx" />
     <None Include="Excercises2020.fsx" />
