--- a/AdventOfCode/AdventOfCode.fsproj
+++ b/AdventOfCode/AdventOfCode.fsproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <LangVersion>preview</LangVersion>
+    <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Utils.fs" />
@@ -11,6 +12,7 @@
     <Compile Include="Excercises2023.fs" />
     <Compile Include="Excercises2022.fs" />
     <Compile Include="Excercises2021.fs" />
+    <Compile Include="Program.fs" />
     <None Include="Excercises2020.fsx" />
     <None Include="Excercises2019.fsx" />
     <None Include="Excercises2018.fsx" />
