--- a/AdventOfCode/AdventOfCode.fsproj
+++ b/AdventOfCode/AdventOfCode.fsproj
@@ -15,8 +15,8 @@
     <Compile Include="Excercises2021.fs" />
     <Compile Include="Excercises2020.fs" />
     <Compile Include="Excercises2019.fs" />
+    <Compile Include="Excercises2018.fs" />
     <Compile Include="Program.fs" />
-    <None Include="Excercises2018.fsx" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Data" Version="6.6.0" />
